<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ABC de la géometrie</string>
    <string name="abc">abc</string>
    <string name="of_the">" de la"</string>
    <string name="geometry1">G</string>
    <string name="geometry2">"éométrie "</string>
    <string name="baseLine">De 4 à 77 ans... et plus !</string>

    <string name="chooseDefi">Choisis un défi :</string>
    <string name="dixPts">10 Pts</string>
    <string name="vingtsPts">20 Pts</string>
    <string name="quarantePts">40 Pts</string>
    <string name="selectLvl">Choisis un niveau :</string>
    <string name="lvl1">1</string>
    <string name="lvl2">2</string>
    <string name="lvl3">3</string>

    <string name="labelQuest">Clique sur le carré blanc :</string>

    <string name="labelTeam">Présentation de l\'équipe</string>
    <string name="labelDawin"><i>Licence Dawin 2014-2015 - IUT Bordeaux 1</i></string>
    <string name="tristan">Tristan</string>
    <string name="yanick">Yanick</string>
    <string name="manon">Manon</string>
    <string name="lucas">Lucas</string>

    <string name="choixtheme">Choisis un thème :</string>
    <string name="couleurs">Couleurs</string>
    <string name="formes">Formes</string>
    <string name="couleursformes">Mixte</string>

    <string name="gg">Bravo !!</string>
    <string name="score">"Score : "</string>
    <string name="temps">"Temps : "</string>
    <string name="nbQuestion">"Mauvaise Réponse : "</string>
    <string name="nbQuestionPluriel">"Mauvaises Réponses : "</string>
    <string name="newRecord">Nouveau record !! </string>
    <string name="pseudo">Entre ton prenom</string>
    <string name="ok">OK</string>
    <string name="minute"> minute et </string>
    <string name="minutes"> minutes et </string>
    <string name="seconde"> seconde</string>
    <string name="secondes"> secondes</string>

    <string name="board">Tableau des scores</string>
    <string name="goScoreBoard">Tableau des scores</string>


    <string name="labeleAlizaza">La Caverne d\'Alizaza</string>
    <string name="labelSiteAlizaza"><i>http://www.lacavernedalizaza.fr/</i></string>
    <string name="activiteAlizaza">Conception, fabrication et préparation de jeux à but pédagogique</string>

    <string name="action_settings">Option</string>

    <string name="about">A propos du jeu</string>

    <string name="txtAbout1">Le jeu est découpé en 3 niveaux :</string>
    <string name="txtAbout2"><b>Niveau 1</b> : Les 6 formes et les 11 couleurs de bases</string>
    <string name="txtAbout3"><b>Niveau 2</b> : Géométrie intermédiaire (formes 3D)</string>
    <string name="txtAbout4"><b>Niveau 3</b> : Géométrie avancée (Angles, symétries,...)</string>

    <string-array name="arrayOK">
        <item>Bravo</item>
        <item>Gagné</item>
        <item>Bien</item>
        <item>Très bien</item>
    </string-array>

    <string-array name="arrayPASOK">
        <item>Perdu</item>
        <item>Dommage</item>
        <item>Presque</item>
    </string-array>

</resources>
