<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/monBleu">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/labelTeam"
            android:textSize="75px"
            android:textColor="@color/monBlanc"
            android:paddingTop="25px"
            android:gravity="center"
            android:id="@+id/txtViewTeam" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250px">

        <TextView
            android:layout_width="179px"
            android:layout_height="181px"
            android:layout_marginLeft="125px"
            android:layout_marginRight="100px"
            android:background="@drawable/avatartristan"
            android:textSize="100px"/>

        <TextView
            android:layout_width="179px"
            android:layout_height="181px"
            android:layout_marginRight="100px"
            android:background="@drawable/avatarmanon"
            android:textSize="100px" />

            <TextView
            android:layout_width="179px"
            android:layout_height="181px"
            android:layout_marginRight="100px"
            android:background="@drawable/avataryanick"
            android:textSize="100px" />

            <TextView
            android:layout_width="179px"
            android:layout_height="181px"
            android:background="@drawable/avatarlucas"
            android:textSize="100px" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450px"
        android:paddingLeft="5px">

        <TextView
            android:id="@+id/txtTristant"
            android:layout_width="179px"
            android:layout_height="181px"
            android:layout_marginLeft="125px"
            android:layout_marginRight="100px"
            android:text="@string/tristan"
            android:textColor="@color/monBlanc"
            android:textSize="45px" />

        <TextView
            android:id="@+id/txtManon"
            android:layout_width="179px"
            android:layout_height="181px"
            android:layout_marginRight="100px"
            android:text="@string/manon"
            android:textColor="@color/monBlanc"
            android:textSize="45px" />

        <TextView
            android:id="@+id/txtYanick"
            android:layout_width="179px"
            android:layout_height="181px"
            android:layout_marginRight="100px"
            android:text="@string/yanick"
            android:textColor="@color/monBlanc"
            android:textSize="45px" />

        <TextView
            android:id="@+id/txtLucas"
            android:layout_width="179px"
            android:layout_height="181px"
            android:text="@string/lucas"
            android:textColor="@color/monBlanc"
            android:textSize="45px" />
    </LinearLayout>

</RelativeLayout>