<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abcgeometrie.ChooseDefiActivity"
    android:background="@color/monBleu">

    <!--Bande de Boutons en haut -->
    <RelativeLayout
        android:id="@+id/barreBoutonHaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="@dimen/size_btn_home_speak"
            android:layout_height="@dimen/size_btn_home_speak"
            android:src="@drawable/btnaccueil"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:layout_width="@dimen/size_btn_home_speak"
            android:layout_height="@dimen/size_btn_home_speak"
            android:layout_toRightOf="@+id/btnHome"
            android:id="@+id/btnTTS"
            android:src="@drawable/btnspeaker"
            android:layout_marginLeft="@dimen/btn_up_margin"/>

        <Button
            android:id="@+id/btnLang"
            android:layout_width="@dimen/size_flag_lang_width"
            android:layout_height="@dimen/size_flag_lang_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/france"/>

    </RelativeLayout>

        <TextView
            android:id="@+id/textChooseDefi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/barreBoutonHaut"
            android:text="@string/chooseDefi"
            android:textSize="@dimen/title_size"
            android:layout_marginTop="@dimen/title_margin_top"
            android:textColor="@color/monBlanc"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/band_margin_bottom">

            <Button
                android:id="@+id/btn10"
                android:layout_width="@dimen/band_10pts_width"
                android:layout_height="@dimen/band_height"
                android:text="@string/dixPts"
                android:background="@color/monVert"
                android:textSize="@dimen/pts_size"
                android:textColor="@color/monBlanc"
                android:textAllCaps="false"
                android:singleLine="true"
                android:gravity="right|center"
                android:paddingRight="@dimen/band_margin_right"/>

            <Button
                android:id="@+id/btn20"
                android:layout_width="@dimen/band_20pts_width"
                android:layout_height="@dimen/band_height"
                android:layout_below="@+id/btn10"
                android:text="@string/vingtsPts"
                android:background="@color/monJaune"
                android:textAllCaps="false"
                android:textSize="@dimen/pts_size"
                android:layout_marginTop="@dimen/band_margin_top_bottom"
                android:layout_marginBottom="@dimen/band_margin_top_bottom"
                android:textColor="@color/monBlanc"
                android:singleLine="true"
                android:gravity="right|center"
                android:paddingRight="@dimen/band_margin_right"/>

            <Button
                android:id="@+id/btn40"
                android:layout_width="@dimen/band_40pts_width"
                android:layout_height="@dimen/band_height"
                android:layout_below="@+id/btn20"
                android:text="@string/quarantePts"
                android:background="@color/monOrange"
                android:textAllCaps="false"
                android:textSize="@dimen/pts_size"
                android:textColor="@color/monBlanc"
                android:singleLine="true"
                android:gravity="right|center"
                android:paddingRight="@dimen/band_margin_right"/>
        </RelativeLayout>

</RelativeLayout>
