<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/monBleu"
    android:id="@+id/relativeLayoutHome">


    <RelativeLayout
        android:id="@+id/bandeSuperieur"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_band_above_height"
        android:background="@color/monVert"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textViewAbc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/abc"
            android:textSize="@dimen/main_abc_size"
            android:layout_marginLeft="@dimen/main_margin_left"
            android:textColor="@color/monBlanc"/>

        <TextView
            android:id="@+id/textViewDeLa"
            android:layout_toRightOf="@+id/textViewAbc"
            android:layout_alignBaseline="@+id/textViewAbc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/of_the"
            android:textSize="@dimen/main_dela_size"
            android:textColor="@color/monBlanc"/>

        <ImageButton
            android:id="@+id/btnIUT"
            android:layout_toLeftOf="@+id/btnAlizaza"
            android:layout_width="@dimen/main_btn_iut_width"
            android:background="@drawable/btn_iut"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btnAlizaza"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_alizaza"
            android:layout_width="@dimen/main_btn_alizaza_width"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bandeMilieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bandeSuperieur">


        <TextView
            android:id="@+id/textViewGeometrie01"
            android:layout_marginLeft="@dimen/main_margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_G_margin_top"
            android:text="@string/geometry1"
            android:textSize="@dimen/main_G_size"
            android:textColor="@color/monBlanc"/>

        <TextView
            android:id="@+id/textViewGeometrie02"
            android:layout_toRightOf="@+id/textViewGeometrie01"
            android:layout_alignBaseline="@+id/textViewGeometrie01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geometry2"
            android:textSize="@dimen/main_eometrie_size"
            android:textColor="@color/monBlanc"/>

        <ImageView
            android:id="@+id/triangleDebut"
            android:layout_toRightOf="@+id/textViewGeometrie02"
            android:background="@drawable/triangle_accueil_debut"
            android:layout_marginTop="@dimen/main_triangle_margin_top"
            android:layout_width="@dimen/main_triangles_width"
            android:layout_height="@dimen/main_triangles_height"/>

        <ImageView
            android:id="@+id/rectangle"
            android:layout_toRightOf="@+id/triangleDebut"
            android:layout_alignBottom="@+id/triangleDebut"
            android:background="@drawable/rectangle_accueil"
            android:layout_width="@dimen/main_rectangle_width"
            android:layout_height="@dimen/main_triangles_height"
            android:layout_marginLeft="@dimen/main_triangle_margin_side"
            android:layout_marginRight="@dimen/main_triangle_margin_side"/>

        <ImageView
            android:id="@+id/triangleFin"
            android:layout_toRightOf="@+id/rectangle"
            android:layout_alignBottom="@+id/triangleDebut"
            android:layout_width="@dimen/main_triangles_width"
            android:layout_height="@dimen/main_triangles_height"
            android:background="@drawable/triangle_accueil_fin"/>

        <TextView
            android:id="@+id/textViewBaseLine"
            android:layout_below="@+id/textViewGeometrie01"
            android:layout_marginLeft="@dimen/main_baseline_margin_left"
            android:layout_marginTop="@dimen/main_baseline_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baseLine"
            android:textSize="@dimen/main_baseline_size"
            android:textColor="@color/monBlanc"/>

    </RelativeLayout>


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_band_bottom_height"
        android:id="@+id/bandeInferieur"
        android:background="@drawable/bande_inferieur_accueil"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/drapeauAngleterre"
            android:layout_toLeftOf="@+id/drapeauFrance"
            android:layout_centerVertical="true"
            android:background="@drawable/angleterre"
            android:layout_width="@dimen/main_flag_width"
            android:layout_height="@dimen/main_flag_height" />

        <ImageButton
            android:id="@+id/drapeauFrance"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:background="@drawable/france"
            android:layout_marginLeft="@dimen/main_flag_margin_side"
            android:layout_marginRight="@dimen/main_flag_margin_side"
            android:layout_width="@dimen/main_flag_width"
            android:layout_height="@dimen/main_flag_height" />

        <ImageButton
            android:id="@+id/drapeauEspagne"
            android:layout_toRightOf="@+id/drapeauFrance"
            android:layout_centerVertical="true"
            android:background="@drawable/espagne"
            android:layout_width="@dimen/main_flag_width"
            android:layout_height="@dimen/main_flag_height" />

    </RelativeLayout>

</RelativeLayout>

