<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/monBleu">

    <!--Bande de Boutons en haut -->
    <RelativeLayout
        android:id="@+id/barreBoutonHaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="@dimen/size_btn_home_speak"
            android:layout_height="@dimen/size_btn_home_speak"
            android:src="@drawable/btnaccueil"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:layout_width="@dimen/size_btn_home_speak"
            android:layout_height="@dimen/size_btn_home_speak"
            android:layout_toRightOf="@+id/btnHome"
            android:id="@+id/btnTTS"
            android:src="@drawable/btnspeaker"
            android:layout_marginLeft="@dimen/btn_up_margin"/>

        <Button
            android:id="@+id/btnLang"
            android:layout_width="@dimen/size_flag_lang_width"
            android:layout_height="@dimen/size_flag_lang_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/france"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/barreBoutonHaut"
        android:layout_marginTop="@dimen/title_margin_top"
        android:gravity="center"
        android:text="@string/choixtheme"
        android:textSize="@dimen/title_size"
        android:id="@+id/txtViewChooseTheme"
        android:textColor="@color/monBlanc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/choose_theme_margin_bottom">

            <Button
            android:id="@+id/btnThemeColor"
            android:layout_width="@dimen/choose_theme_color_width"
            android:layout_height="@dimen/choose_theme_img_height"
            android:layout_toLeftOf="@+id/btnThemeForm"
            android:text="@string/couleurs"
            android:textAllCaps="false"
            android:background="@drawable/theme_couleur"
            android:textSize="@dimen/btn_theme_size_typo"
            android:textColor="@color/monBlanc"
            android:gravity="bottom|center"/>

        <ImageButton
            android:id="@+id/flecheGauche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/flecheCentre"
            android:layout_alignBottom="@+id/flecheCentre"
            android:background="@drawable/arrow"/>

        <ImageButton
            android:id="@+id/flecheCentre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnThemeColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/choose_theme_arrow_margin_top"
            android:layout_marginLeft="@dimen/choose_theme_arrow_margin"
            android:layout_marginRight="@dimen/choose_theme_arrow_margin"
            android:background="@drawable/arrow"/>

        <ImageButton
            android:id="@+id/flecheDroite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/flecheCentre"
            android:layout_alignBottom="@+id/flecheCentre"
            android:background="@drawable/arrow"/>

        <Button
            android:id="@+id/btnThemeForm"
            android:layout_width="@dimen/choose_theme_shape_mixed_width"
            android:layout_height="@dimen/choose_theme_img_height"
            android:layout_marginLeft="@dimen/theme_btn_margin"
            android:layout_marginRight="@dimen/theme_btn_margin"
            android:layout_centerHorizontal="true"
            android:text="@string/formes"
            android:textAllCaps="false"
            android:background="@drawable/theme_formes"
            android:gravity="bottom|center"
            android:textSize="@dimen/btn_theme_size_typo"
            android:textColor="@color/monBlanc"/>


        <Button
            android:id="@+id/btnThemeColorAndForm"
            android:layout_width="@dimen/choose_theme_shape_mixed_width"
            android:layout_height="@dimen/choose_theme_img_height"
            android:layout_toRightOf="@+id/btnThemeForm"
            android:text="@string/couleursformes"
            android:textAllCaps="false"
            android:background="@drawable/theme_mixte"
            android:textSize="@dimen/btn_theme_size_typo"
            android:gravity="bottom|center"
            android:textColor="@color/monBlanc"/>

    </RelativeLayout>

</RelativeLayout>
